learn.acloud.guru/course/d068441f-75b4-4fe8-a7a6-df9153f24a35/7-services-and-networking/2-network-policies/network-policy-client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    allow-access: "true"
    sandbox: ckad-7-2
  namespace: acg-ckad
  name: network-policy-client-pod
spec:
  containers:
    - name: busybox
      image: curlimages/curl:7.75.0
      command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
      resources:
        limits:
          cpu: 500m
          memory: 128Mi
