learn.acloud.guru/course/d068441f-75b4-4fe8-a7a6-df9153f24a35/7-services-and-networking/2-network-policies/network-policy-secure-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: secure-app
    sandbox: ckad-7-2
  namespace: acg-ckad
  name: network-policy-secure-pod
spec:
  containers:
    - name: nginx
      image: nginx:1
      resources:
        limits:
          cpu: 500m
          memory: 128Mi
      ports:
        - containerPort: 80
