learn.acloud.guru/course/d068441f-75b4-4fe8-a7a6-df9153f24a35/7-services-and-networking/2-network-policies/my-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    sandbox: ckad-7-2
  namespace: acg-ckad
  name: my-network-policy
spec:
  podSelector:
    matchLabels:
      app: secure-app
      sandbox: ckad-7-2
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              allow-access: "true"
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - podSelector:
            matchLabels:
              allow-access: "true"
      ports:
        - protocol: TCP
          port: 80
